Update index.html new new api

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2485,7 +2485,7 @@ Blind: Most encryption doesn’t notice when it's being attacked — it just enc
 
   setTimeout(loadLiveNews, 300);
 })();
-const API_BASE = "/"; // relative path to Flask API
+const API_BASE = "/"; // relative path to Flask APIi
 
 async function encryptMessage() {
     const message = document.getElementById('encrypt-message').value.trim();
